@@ -1,6 +1,11 @@
 Revision history for Perl extension Carp::Assert::More.
 
 
+NEXT
+        [ENHANCEMENTS]
+        Add assert_context_list() function.
+
+
 2.4.0   Mon Mar  4 21:54:07 CST 2024
         [ENHANCEMENTS]
         New function assert_arrayref_all() calls an assertion function for every element in the array.
